--- a/src/app/brands/add-brands/add-brands.component.html
+++ b/src/app/brands/add-brands/add-brands.component.html
@@ -102,6 +102,6 @@
         </div>
       </form>
     </ng-template>
-    <button class="btn  btn-lg btn-outline-primary float-right m-3" (click)="open(content)">THÊM THƯƠNG HIỆU</button>
+    <button class="btn  btn-sn btn-outline-primary float-right m-3" (click)="open(content)">THÊM THƯƠNG HIỆU</button>
   </form>
 </div>
