--- a/src/app/product/add-product/add-product.component.html
+++ b/src/app/product/add-product/add-product.component.html
@@ -256,6 +256,6 @@
         <button type="button" class="btn btn-secondary" (click)="c('Close click')">Close</button>
       </div>
     </ng-template>
-    <button class="btn btn-lg btn-outline-primary" (click)="open(content)">THÊM SẢN PHẨM</button>
+    <button class="btn btn-sn btn-outline-primary" (click)="open(content)">THÊM SẢN PHẨM</button>
   </form>
 </div>
