--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -44,7 +44,7 @@
     Brands
   </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="/discount">
-    <mat-icon>pages</mat-icon>
-    Discount
+    <mat-icon> local_play</mat-icon>
+    Voucher
   </a>
 </mat-nav-list>
