--- a/src/app/discount/discount.component.html
+++ b/src/app/discount/discount.component.html
@@ -6,20 +6,20 @@
   <mat-drawer-content>
     <app-header (toggleSidebarForMe)="sideBarToggler()"></app-header>
     <div class="container-fluid page">
-      <div class="d-flex page__box p-3 mt-2">News</div>
+      <div class="d-flex page__box p-3 mt-2">Voucher</div>
       <div class="page__content shadow p-3 position-relative">
         <div class="content">
           <div class="container-fluid">
             <!---->
-            <div class="alert alert-success">
+            <!-- <div class="alert alert-success">
               <span>BÀI VIẾT ĐÃ ĐĂNG</span>
-            </div>
+            </div> -->
             <div class="col-md-12">
               <div class="card">
                 <div class="card-header card-header-tabs card-header-primary">
                   <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
-                      <span class="nav-tabs-title">BÀI VIẾT</span>
+                      <h4 class="nav-tabs-title">Khuyến mãi</h4>
                     </div>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
 
                           </div>
                           <div>
-                            <app-add-discount></app-add-discount>
+                            <app-add-discount (savingFinshed)="finishAndAlert($event)"></app-add-discount>
                           </div>
                         </div>
                       </div>
@@ -64,23 +64,23 @@
                           <table class="table">
                             <thead class="text-primary">
                               <th>No</th>
-                              <th>Mã bài viết</th>
-                              <th>Tên bài viết</th>
+                              <th>Mã khuyến mãi</th>
+                              <th>Tên khuyến mãi</th>
                               <th>Mô tả</th>
                               <th>Ngày bắt đầu</th>
                               <th>Ngày kết thúc</th>
-                              <th>Discount</th>
+                              <th>Voucher</th>
                               <th></th>
                             </thead>
                             <tbody>
                               <tr *ngFor="let item of discount,let i =index">
                                 <td>{{ i+1 }}</td>
                                 <td>{{ item.code }}</td>
-                                <td style="width: 150px;">{{ item.name }}</td>
-                                <td style="width: 300px;">{{ item.description }}</td>
+                                <td style="width: 100px;">{{ item.name }}</td>
+                                <td style="width: 200px;">{{ item.description }}</td>
                                 <td>{{ item.starDay |date }}</td>
                                 <td>{{ item.endDay |date }}</td>
-                                <td>{{ item.discount }}</td>
+                                <td>{{ item.discount|number: '2.' }}VNĐ</td>
                                 <td>
                                  <app-edit-discount [id]="item.id" (updateFinished)="finishAndAlert($event)">
 
@@ -94,21 +94,13 @@
                                </tr>
                              </tbody>
                            </table>
-                         </div>
-                         <nav aria-label="Page navigation example">
-                          <ul class="pagination">
-                            <li class="page-item" (click)="Loadpage(pages-1)"><a class="page-link">Previous</a></li>
-                            <input class="page-link" style="width: 50px;" type="number" name="pages" [(ngModel)]="pages"
-                            (ngModelChange)="Loadpage(pages)" />
-                            <li class="page-item" (click)="Loadpage(pages+1)"><a class="page-link">Next</a></li>
-                            <label class="page-link">Size</label>
-                            <select class="page-link" [(ngModel)]="sizes" (click)="Loadsize(sizes)">
-                              <option value=5>5</option>
-                              <option value=10>10</option>
-                              <option value=15>15</option>
-                            </select>
-                          </ul>
-                        </nav>
+                           <span *ngIf="lenght==0" style="margin-left: 50%;">Không có dữ liệu</span>
+                          </div>
+                          <form>
+                            <mat-paginator *ngIf="lenght!=0" [length]="lenght" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" (page)="LoadPagesize($event)"
+                            aria-label="Select page">
+                          </mat-paginator>
+                          </form>
                        </div>
                    </div>
                  </div>
@@ -118,7 +110,7 @@
          </div>
          <ng-template #content let-c="close" let-d="dismiss">
            <div class="modal-header">
-             <h4 class="modal-title">Xóa Bai viet</h4>
+             <h4 class="modal-title">Xóa khuyến mãi</h4>
              <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
                <span aria-hidden="true">&times;</span>
              </button>
