--- a/src/app/discount/edit-discount/edit-discount.component.html
+++ b/src/app/discount/edit-discount/edit-discount.component.html
@@ -1,9 +1,9 @@
 
-<div id="newsEdit">
+<div id="newsadd">
   <form #productAddForm="ngForm" [formGroup]="infoNew">
     <ng-template #content let-c="close" let-d="dismiss">
       <div class="modal-header">
-        <h4 class="modal-title">Chỉnh sửa bài viết</h4>
+        <h4 class="modal-title">Chỉnh sửa  khuyến mãi</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -64,7 +64,7 @@
           </div>
           </div>
           <div class="row">
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="form-group">
               <label class="bmd-label-floating">Thương hiệu</label>
               <select name="brand" id="brand" formControlName="brand" [(ngModel)]="discount.brand"
@@ -77,8 +77,8 @@
                 vui lòng chọn thương hiệu</small>
               <i class="fa fa-check-circle" style="color:green;" *ngIf="infoNew.controls.brand.valid"></i>
             </div>
-          </div>
-          <div class="col-md-4">
+          </div> -->
+          <div class="col-md-6">
             <div class="form-group">
               <label class="bmd-label-floating">Số lượng</label>
               <input
@@ -89,27 +89,27 @@
               />
               <small id="nameBrandHelp" class="form-text text-muted err"  *ngIf="!infoNew.get('amount')?.valid && infoNew.get('amount')?.touched " >
                 <i class="fa fa-times-circle" style="color:firebrick;"></i>
-                 vui lòng kiểm tra link ảnh</small>
+                 vui lòng nhập số lượng mã</small>
               <i class="fa fa-check-circle" style="color:green;" *ngIf="infoNew.controls.description.valid"></i>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="form-group">
-              <label class="bmd-label-floating">Discount</label>
-              <select
-              name="discount" id="discount"
-              [(ngModel)]="discount.discount"
-              formControlName="discount"
-              class="custom-select mb-3"
-            >
-              <option value=5 selected>5%</option>
-              <option value=10>10%</option>
-              <option value=15>15%</option>
-            </select>
-              <small id="nameBrandHelp" class="form-text text-muted err"  *ngIf="!infoNew.get('discount')?.valid && infoNew.get('discount')?.touched " >
-                <i class="fa fa-times-circle" style="color:firebrick;"></i>
-                 vui lòng chọn discount</small>
-                 <i class="fa fa-check-circle" style="color:green;" *ngIf="infoNew.controls.description.valid"></i>
+              <label class="bmd-label-floating">Voucher</label>
+                <select
+                name="discount" id="discount"
+                [(ngModel)]="discount.discount"
+                formControlName="discount"
+                class="custom-select mb-3"
+              >
+                <option value=100000 selected>100,000 VNĐ</option>
+                <option value=200000>200,000 VNĐ</option>
+                <option value=300000>300,000 VNĐ</option>
+              </select>
+                <small id="nameBrandHelp" class="form-text text-muted err"  *ngIf="!infoNew.get('discount')?.valid && infoNew.get('discount')?.touched " >
+                  <i class="fa fa-times-circle" style="color:firebrick;"></i>
+                   vui lòng chọn discount</small>
+                   <i class="fa fa-check-circle" style="color:green;" *ngIf="infoNew.controls.description.valid"></i>
             </div>
           </div>
           </div>
@@ -120,7 +120,7 @@
               <input
                 type="date" name="starDay" id="starDay"
                 [(ngModel)]="discount.starDay"
-                formControlName="starDay"
+                value="{{discount.starDay | date: 'yyyy-MM-dd'}}"
                 class="form-control"
               />
               <small id="nameBrandHelp" class="form-text text-muted err"  *ngIf="!infoNew.get('starDay')?.valid && infoNew.get('starDay')?.touched " >
@@ -136,8 +136,9 @@
                 type="date" name="endDay" id="endDay"
                 [(ngModel)]="discount.endDay"
                 [min]="discount.starDay"
-                formControlName="endDay"
+                [value]="discount.endDay | date: 'yyyy-MM-dd'"
                 class="form-control"
+                
               />
               <small id="nameBrandHelp" class="form-text text-muted err"  *ngIf="!infoNew.get('endDay')?.valid && infoNew.get('endDay')?.touched " >
                 <i class="fa fa-times-circle" style="color:firebrick;"></i>
@@ -166,9 +167,9 @@
           </div>
 
       </div>
-             </div>
+      </div>
       <app-message></app-message>
-      <div class="modal-footer" *ngIf="infoNew.valid">
+      <div class="modal-footer" >
         <button type="submit" class="btn btn-primary pull-right" (click)="update()">Edit</button>
         <button type="button" class="btn btn-secondary" (click)="c('Close click')">Close</button>
       </div>
