--- a/src/app/home/edit-oder/edit-oder.component.html
+++ b/src/app/home/edit-oder/edit-oder.component.html
@@ -144,7 +144,7 @@
               class="custom-select mb-3"
             >
               <option value="PayPal" >Đã thanh toán</option>
-              <option value="" selected>thanh toán khi nhận hàng</option>
+              <option value="COD" selected>thanh toán khi nhận hàng</option>
             </select>
           </div>
         </div>
