--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -54,7 +54,7 @@
                         <!-- <div>
                             <app-add-news (savingFinshed)="finishAndAlert($event)"></app-add-news>
                           </div> -->
-                        <button (click)="openDialog()">Add News</button>
+                        <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Add News</button>
                         <table class="table">
                           <thead class="text-primary">
                             <th>No</th>
@@ -117,7 +117,7 @@
         </div>
         <ng-template #content let-c="close" let-d="dismiss">
           <div class="modal-header">
-            <h4 class="modal-title">Xóa Bai viet</h4>
+            <h4 class="modal-title">Xóa bài viết</h4>
             <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
               <span aria-hidden="true">&times;</span>
             </button>
