--- a/src/app/brands/brands.component.html
+++ b/src/app/brands/brands.component.html
@@ -59,6 +59,11 @@
 
                       <div class="card-body" >
                         <div class="table-responsive">
+                          <div *ngIf="btnDisabled" class="m-auto">
+                            <h1 class="text-center display-3 mt-5">
+                              <i class="fas fa-spinner fa spin"></i>
+                            </h1>
+                          </div>
                           <div>
                             <app-add-brands (savingFinshed)="finishAndAlert($event)"></app-add-brands>
                           </div>
@@ -67,6 +72,7 @@
                           </div>
                           <table class="table">
                             <thead class="text-primary">
+
                               <th>No</th>
                               <th>Mã thương hiệu</th>
                               <th>Tên thương hiệu</th>
