--- a/src/app/dashboard/dashboardtest.component.html
+++ b/src/app/dashboard/dashboardtest.component.html
@@ -9,6 +9,7 @@
       <div class="d-flex page__box p-3 mt-2">Dashboard</div>
       <div class="page__content shadow p-3 position-relative">
         <div class="d-flex" id="wrapper">
+
           <!-- Sidebar -->
           <div class="bg-white" id="sidebar-wrapper">
           </div>
@@ -66,7 +67,11 @@
                   </div>
                 </div>
               </div>
-
+              <div *ngIf="btnDisabled" class="m-auto">
+                <h1 class="text-center display-3 mt-5">
+                  <i class="fas fa-spinner fa spin"></i>
+                </h1>
+              </div>
               <div class="row my-5" *ngIf="oder1.length!=0">
                 <h1 class="fs-4 mb-3" >Recent Orders</h1>
                 <div class="col">
