--- a/src/app/delivery/delivery.component.html
+++ b/src/app/delivery/delivery.component.html
@@ -39,6 +39,11 @@
                 </form>
               <div class="card-body">
                 <div class="table-responsive">
+                  <div *ngIf="btnDisabled" class="m-auto">
+                    <h1 class="text-center display-3 mt-5">
+                      <i class="fas fa-spinner fa spin"></i>
+                    </h1>
+                  </div>
                   <table class="table">
                     <thead class="text-primary">
                       <th>No</th>
@@ -49,6 +54,7 @@
                       <th></th>
                     </thead>
                     <tbody>
+
                       <tr *ngFor="let item of oder3, let i = index ">
                         <td>{{i+1}}</td>
                         <td>{{item.id}}</td>
