--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -48,6 +48,11 @@
                     </form>
                     <div class="card-body">
                       <div class="table-responsive">
+                        <div *ngIf="btnDisabled" class="m-auto">
+                          <h1 class="text-center display-3 mt-5">
+                            <i class="fas fa-spinner fa spin"></i>
+                          </h1>
+                        </div>
                         <div class="alert alert-success" *ngIf="mess!=''">
                           <span>{{mess}}</span>
                         </div>
