--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -56,6 +56,11 @@
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">
+                        <div *ngIf="btnDisabled" class="m-auto">
+                          <h1 class="text-center display-3 mt-5">
+                            <i class="fas fa-spinner fa spin"></i>
+                          </h1>
+                        </div>
                         <div style="margin-left: 90%;">
                           <button rel="tooltip" title="Download" class="btn btn-success" (click)="exportExcel()">
                           <i class="fas fa-download"></i></button>
