--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -51,6 +51,11 @@
                   </div>
                   <div class="card-body">
                     <div class="table-responsive">
+                      <div *ngIf="btnDisabled" class="m-auto">
+                        <h1 class="text-center display-3 mt-5">
+                          <i class="fas fa-spinner fa spin"></i>
+                        </h1>
+                      </div>
                       <table class="table">
                         <thead class="text-primary">
                           <th>No</th>
