--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -59,7 +59,7 @@
                         <!-- <div>
                             <app-add-news (savingFinshed)="finishAndAlert($event)"></app-add-news>
                           </div> -->
-                        <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Add News</button>
+                        <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Thêm bài viết</button>
                         <table class="table">
                           <thead class="text-primary">
                             <th>No</th>
