--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -19,7 +19,7 @@
                 <div class="card-header card-header-tabs card-header-primary">
                   <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
-                      <h3 class="nav-tabs-title">BÀI VIẾT</h3>
+                      <h3 class="nav-tabs-title">Bài viết</h3>
                     </div>
                   </div>
                 </div>
