--- a/src/app/sales/detail-cart/detail-cart.component.html
+++ b/src/app/sales/detail-cart/detail-cart.component.html
@@ -61,6 +61,6 @@
       </div>
     </ng-template>
     <button rel="tooltip" title="detail user" class="btn btn-sm btn-outline-primary " (click)="open(content)">
-      <i class="fas fa-edit"></i></button>
+      <i class="fas fa-eye"></i></button>
   </form>
 </div>
