--- a/src/app/discount/add-discount/add-discount.component.html
+++ b/src/app/discount/add-discount/add-discount.component.html
@@ -3,7 +3,7 @@
   <form #productAddForm="ngForm" [formGroup]="infoNew">
     <ng-template #content let-c="close" let-d="dismiss">
       <div class="modal-header">
-        <h4 class="modal-title">Thêm  khuyến mãi</h4>
+        <h4 class="modal-title">Add voucher</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
