--- a/src/app/news/edit-news/edit-news.component.html
+++ b/src/app/news/edit-news/edit-news.component.html
@@ -4,7 +4,7 @@
     <ng-template #content let-c="close" let-d="dismiss">
       <form #productAddForm="ngForm" [formGroup]="infoNew">
       <div class="modal-header">
-        <h4 class="modal-title">Chỉnh sửa bài viết</h4>
+        <h4 class="modal-title">Edit news</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
