--- a/src/app/brands/edit-brands/edit-brands.component.html
+++ b/src/app/brands/edit-brands/edit-brands.component.html
@@ -2,7 +2,7 @@
   <form #productAddForm="ngForm">
     <ng-template #content let-c="close" let-d="dismiss">
       <div class="modal-header">
-        <h4 class="modal-title">Chỉnh sửa Thương Hiệu</h4>
+        <h4 class="modal-title">Edit brand</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
