--- a/src/app/order-suceess/suceess.component.html
+++ b/src/app/order-suceess/suceess.component.html
@@ -84,7 +84,7 @@
                               <td>{{item.timeSucess|date}}</td>
                               <td class="text-primary">{{item.total|number: '2.'}}</td>
                               <td>
-                                <app-detail-suceess [id]="item.id" (updateFinished)="finishAndAlert($event)">
+                                <app-detail-suceess [id]="item.id" >
 
                                 </app-detail-suceess>
                               </td>
