--- a/src/app/discount/discount.component.html
+++ b/src/app/discount/discount.component.html
@@ -91,7 +91,7 @@
 
                                  </app-edit-discount>
 
-                                 <a (click)="confirmDeleteNew(content, item.id,item.title)"
+                                 <a (click)="confirmDeleteNew(content, item.id,item.name)"
                                  class="btn btn-sm btn-outline-danger">
                                  <i class="fas fa-trash "></i>
                                </a>
