--- a/src/app/cancels/detail-cancel/detail-cancel.component.html
+++ b/src/app/cancels/detail-cancel/detail-cancel.component.html
@@ -100,8 +100,8 @@
             </div>
             <div class="col-md-12">
               <label class="bmd-label-floating">Lí do Hủy đơn</label>
-              <textarea style="height: 300px;" type="text" name="description" id="description"
-              value="{{oder.note}}"formControlName="description" class="form-control"></textarea>
+              <textarea style="height: 300px;" type="text" name="note" id="description"
+              value="{{oder.note}}"formControlName="note" class="form-control"></textarea>
             </div>
           </div>
         </div>
