--- a/src/app/delivery/edit-delivery/edit-delivery.component.html
+++ b/src/app/delivery/edit-delivery/edit-delivery.component.html
@@ -134,8 +134,8 @@
 
               class="custom-select mb-3"
             >
-              <option value="confimed" >Đã thanh toán</option>
-              <option value="unconfirmed" selected>thanh toán khi nhận hàng</option>
+              <option value="PayPal" >Đã thanh toán</option>
+              <option value="COD" selected>thanh toán khi nhận hàng</option>
             </select>
           </div>
         </div>
@@ -143,7 +143,7 @@
           <div class="col-md-12">
             <label class="bmd-label-floating">Trạng thái</label>
             <select
-              name="status" id="status"
+              name="state" id="state"
               [(ngModel)]="oder.state"
 
               class="custom-select mb-3"
