--- a/src/app/delivery/edit-delivery/edit-delivery.component.html
+++ b/src/app/delivery/edit-delivery/edit-delivery.component.html
@@ -130,7 +130,7 @@
           <div class="col-md-9">
             <select
               name="status" id="status"
-              value="{{oder.state}}"
+              value="{{oder.stateOrder}}"
 
               class="custom-select mb-3"
             >
