--- a/src/app/cancels/detail-cancel/detail-cancel.component.html
+++ b/src/app/cancels/detail-cancel/detail-cancel.component.html
@@ -92,6 +92,20 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-md-3">
+              <label class="bmd-label-floating">Thanh toán</label>
+            </div>
+            <div class="col-md-9">
+              <select
+                name="status" id="status"
+                value="{{oder.stateOrder}}"
+
+                class="custom-select mb-3"
+              >
+                <option value="PayPal" >Đã thanh toán</option>
+                <option value="COD" selected>thanh toán khi nhận hàng</option>
+              </select>
+            </div>
             <div class="col-md-12">
               <label class="bmd-label-floating">Trạng thái</label>
               <select name="status" id="status" value="{{oder.state}}" class="custom-select mb-3">
