--- a/src/app/delivery/edit-delivery/edit-delivery.component.html
+++ b/src/app/delivery/edit-delivery/edit-delivery.component.html
@@ -88,7 +88,6 @@
                 <input
                   type="date" name="timeSucess" id="timeSucess"
                   value="{{oder.timeSucess|date: 'yyyy-MM-dd'}}"
-                  formControlName="timeSucess"
                   class="form-control"
                 />
             </div>
@@ -129,7 +128,7 @@
           </div>
           <div class="col-md-9">
             <select
-              name="status" id="status"
+              name="stateOrder" id="stateOrder"
               value="{{oder.stateOrder}}"
 
               class="custom-select mb-3"
@@ -149,7 +148,7 @@
               class="custom-select mb-3"
             >
               <option value="confimed">Xác nhận và giao hàng</option>
-              <option value="cancel">Huy đơn hàng</option>
+              <option value="cancel">Hủy đơn hàng</option>
               <option value="success">Giao hàng thành công</option>
             </select>
           </div>
