--- a/src/app/home/edit-oder/edit-oder.component.html
+++ b/src/app/home/edit-oder/edit-oder.component.html
@@ -154,7 +154,7 @@
           </div>
           <div class="col-md-9">
             <select
-              name="state" id="state"
+              name="status" id="status"
               [(ngModel)]="oder.state"
 
               class="custom-select mb-3"
