--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -19,7 +19,7 @@
                 <div class="card-header card-header-tabs card-header-primary">
                   <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
-                      <h3 class="nav-tabs-title">Bài viết</h3>
+                      <h3 class="nav-tabs-title">BÀI VIẾT</h3>
                     </div>
                   </div>
                 </div>
@@ -42,7 +42,7 @@
                             </button>
 
                           </div>
-
+                          <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Thêm bài viết</button>
                         </div>
                       </div>
                     </form>
@@ -59,7 +59,7 @@
                         <!-- <div>
                             <app-add-news (savingFinshed)="finishAndAlert($event)"></app-add-news>
                           </div> -->
-                        <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Thêm bài viết</button>
+
                         <table class="table">
                           <thead class="text-primary">
                             <th>No</th>
