--- a/src/app/cancels/cancel.component.html
+++ b/src/app/cancels/cancel.component.html
@@ -73,14 +73,14 @@
                               <td>{{item.timeOrder|date}}</td>
                               <td class="text-primary">{{item.total|number: '2.'}}</td>
                               <td>
-                                <app-detail-cancel [id]="item.id" (updateFinished)="finishAndAlert($event)">
+                                <app-detail-oder [id]="item.id" (updateFinished)="finishAndAlert($event)">
 
-                                </app-detail-cancel>
+                                </app-detail-oder>
                               </td>
                             </tr>
                           </tbody>
                         </table>
-                        <span *ngIf="lenght==0" style="margin-left: 50%;">Không có dữ liệu</span>
+                        <span *ngIf="lenght==0" style="margin-left: 40%;">Không có dữ liệu</span>
                       </div>
                       <form>
                         <mat-paginator *ngIf="lenght!=0" [length]="lenght" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" (page)="LoadPagesize($event)"
