--- a/src/app/cancels/detail-cancel/detail-oder.component.html
+++ b/src/app/cancels/detail-cancel/detail-oder.component.html
@@ -68,7 +68,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <label class="bmd-label-floating">Ngày dự kiến nhận hàng</label>
-              <input type="date" name="timeSucess" id="timeSucess"
+              <input type="date" name="timeSucess" id="timeSucess" 
                 value="{{oder.timeSucess|date: 'yyyy-MM-dd'}}"  class="form-control" />
             </div>
             </div>
@@ -87,35 +87,21 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label class="bmd-label-floating">Mã đơn hàng </label>
-                <input type="text" name="total" id="total" [value]="oder.codeOder" class="form-control" />
+                <input type="text" name="total" id="total" [(ngModel)]="oder.codeOder" class="form-control" />
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3">
-              <label class="bmd-label-floating">Thanh toán</label>
-            </div>
-            <div class="col-md-9">
-              <select
-                name="status" id="status"
-                value="{{oder.stateOrder}}"
-
-                class="custom-select mb-3"
-              >
-                <option value="PayPal" >Đã thanh toán</option>
-                <option value="COD" selected>thanh toán khi nhận hàng</option>
-              </select>
-            </div>
             <div class="col-md-12">
               <label class="bmd-label-floating">Trạng thái</label>
-              <select name="status" id="status" value="{{oder.state}}" class="custom-select mb-3">
-                <option value="cancel">Huy đơn hàng</option>
+              <select name="status" id="status" [(ngModel)]="oder.state" class="custom-select mb-3">
+                <option value="cancel">Hủy đơn hàng</option>
               </select>
             </div>
             <div class="col-md-12">
               <label class="bmd-label-floating">Lí do Hủy đơn</label>
-              <textarea style="height: 300px;" type="text" name="note" id="description"
-              value="{{oder.note}}"formControlName="note" class="form-control"></textarea>
+              <textarea style="height: 300px;" type="text" name="description" id="description"
+              value="{{oder.note}}"formControlName="description" class="form-control"></textarea>
             </div>
           </div>
         </div>
