--- a/src/app/order-suceess/suceess.component.html
+++ b/src/app/order-suceess/suceess.component.html
@@ -84,14 +84,13 @@
                               <td>{{item.timeSucess|date}}</td>
                               <td class="text-primary">{{item.total|number: '2.'}}</td>
                               <td>
-                                <app-detail-suceess [id]="item.id" >
+                                <app-detail-suceess [id]="item.id" (updateFinished)="finishAndAlert($event)">
 
                                 </app-detail-suceess>
                               </td>
                             </tr>
                           </tbody>
                         </table>
-                        <span *ngIf="oder2.length==0" style="margin-left: 50%;">Không có dữ liệu</span>
                       </div>
                       <form>
                         <mat-paginator [length]="lenght" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" (page)="LoadPagesize($event)"
