--- a/src/app/home/edit-oder/edit-oder.component.html
+++ b/src/app/home/edit-oder/edit-oder.component.html
@@ -88,7 +88,6 @@
               <input
                 type="date" name="timeSucess" id="timeSucess"
                 [(ngModel)]="oder.timeSucess"
-                [min]="oder.timeOrder|date: 'yyyy-MM-dd'"
               class="form-control"
               />
             <!-- <small id="timeSucessHelp" class="form-text text-muted err"
@@ -169,7 +168,7 @@
           <div class="col-md-12">
             <label class="bmd-label-floating">Lí do Hủy đơn</label>
             <textarea style="height: 300px;" type="text" name="note" id="note"
-              formControlName="note" [(ngModel)]="oder.note" class="form-control"></textarea>
+              [(ngModel)]="oder.note" class="form-control"></textarea>
           </div>
         </div>
       </div>
