--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,6 +2,11 @@
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100 p-t-85 p-b-20">
+      <div *ngIf="btnDisabled" class="m-auto">
+        <h1 class="text-center display-3 mt-5">
+          <i class="fas fa-spinner fa spin"></i>
+        </h1>
+      </div>
       <form class="login100-form validate-form">
         <span class="login100-form-title p-b-70">
           Welcome
