--- a/src/app/home/edit-oder/edit-oder.component.html
+++ b/src/app/home/edit-oder/edit-oder.component.html
@@ -88,6 +88,7 @@
               <input
                 type="date" name="timeSucess" id="timeSucess"
                 [(ngModel)]="oder.timeSucess"
+                [min]="oder.timeOrder|date: 'yyyy-MM-dd'"
               class="form-control"
               />
             <!-- <small id="timeSucessHelp" class="form-text text-muted err"
