--- a/src/app/delivery/edit-delivery/edit-delivery.component.html
+++ b/src/app/delivery/edit-delivery/edit-delivery.component.html
@@ -129,7 +129,7 @@
           </div>
           <div class="col-md-9">
             <select
-              name="status" id="status"
+              name="stateOrder" id="stateOrder"
               value="{{oder.stateOrder}}"
 
               class="custom-select mb-3"
@@ -143,7 +143,7 @@
           <div class="col-md-12">
             <label class="bmd-label-floating">Trạng thái</label>
             <select
-              name="status" id="status"
+              name="state" id="state"
               [(ngModel)]="oder.state"
 
               class="custom-select mb-3"
