--- a/src/app/delivery/edit-delivery/edit-delivery.component.html
+++ b/src/app/delivery/edit-delivery/edit-delivery.component.html
@@ -87,7 +87,7 @@
                 <label class="bmd-label-floating">Ngày dự kiến nhận hàng</label>
                 <input
                   type="date" name="timeSucess" id="timeSucess"
-                  [value]="oder.dateOder|date: 'yyyy-MM-dd'"
+                  [value]="oder.timeSucess|date: 'yyyy-MM-dd'"
                   class="form-control"
                 />
             </div>
