--- a/src/app/news/edit-news/edit-news.component.html
+++ b/src/app/news/edit-news/edit-news.component.html
@@ -147,7 +147,7 @@
         <button type="button" class="btn btn-secondary" (click)="c('Close click')">Close</button>
       </div>
     </form>
-    <app-my-ck-editor [(ngModel)]="news.htmlData" ></app-my-ck-editor>
+    <app-my-ck-editor [(ngModel)]="htmlFormat" ></app-my-ck-editor>
 
     </ng-template>
     <button  rel="tooltip" title="Edit Task"
