--- a/src/app/order-suceess/suceess.component.html
+++ b/src/app/order-suceess/suceess.component.html
@@ -91,9 +91,10 @@
                             </tr>
                           </tbody>
                         </table>
+                        <span *ngIf="oder2.length==0" style="margin-left: 50%;">Không có dữ liệu</span>
                       </div>
                       <form>
-                        <mat-paginator [length]="lenght" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" (page)="LoadPagesize($event)"
+                        <mat-paginator *ngIf="lenght!=0" [length]="lenght" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" (page)="LoadPagesize($event)"
                         aria-label="Select page">
                       </mat-paginator>
                       </form>
