--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
-<app-message></app-message>
+
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100 p-t-85 p-b-20">
-      <div *ngIf="btnDisabled" class="m-auto">
+      <div style="margin-left: 48%;" *ngIf="btnDisabled" >
         <h1 class="text-center display-3 mt-5">
-          <i class="fas fa-spinner fa spin"></i>
+          <mat-spinner></mat-spinner>
         </h1>
       </div>
-      <form class="login100-form validate-form">
+      <form class="login100-form validate-form" *ngIf="!btnDisabled">
         <span class="login100-form-title p-b-70">
           Welcome
         </span>
