--- a/src/app/Blog/blog.component.html
+++ b/src/app/Blog/blog.component.html
@@ -16,13 +16,13 @@
               <div class="card-header card-header-primary">
                 <h3 class="card-title">Bình luận chưa trả lời</h3>
               </div>
-              <div class="card-body">
+              <div style="margin-left: 50%;" *ngIf="btnDisabled" >
+                <h1 class="text-center display-3 mt-5">
+                  <mat-spinner></mat-spinner>
+                </h1>
+              </div>
+              <div class="card-body" *ngIf="!btnDisabled">
                 <div class="table-responsive">
-                  <div *ngIf="btnDisabled" class="m-auto">
-                    <h1 class="text-center display-3 mt-5">
-                      <i class="fas fa-spinner fa spin"></i>
-                    </h1>
-                  </div>
                   <table class="table">
                     <thead class="text-primary">
                       <th>No</th>
