--- a/src/app/cancels/cancel.component.html
+++ b/src/app/cancels/cancel.component.html
@@ -38,13 +38,13 @@
                         </div>
                       </div>
                     </form>
-                    <div class="card-body">
+                    <div style="margin-left: 50%;" *ngIf="btnDisabled" >
+                      <h1 class="text-center display-3 mt-5">
+                        <mat-spinner></mat-spinner>
+                      </h1>
+                    </div>
+                    <div class="card-body" *ngIf="!btnDisabled">
                       <div class="table-responsive">
-                        <div *ngIf="btnDisabled" class="m-auto">
-                          <h1 class="text-center display-3 mt-5">
-                            <i class="fas fa-spinner fa spin"></i>
-                          </h1>
-                        </div>
                         <div class="btn-group"  role="group" aria-label="Basic example" style="margin-left: 66%;">
                           <button type="button" (click)="Loadday(0)" class="btn btn-info" >Day</button>
                           <button type="button" (click)="Loadday(7)"class="btn btn-light">Week</button>
