--- a/src/app/dashboard/dashboardtest.component.html
+++ b/src/app/dashboard/dashboardtest.component.html
@@ -16,96 +16,103 @@
           <!-- /#sidebar-wrapper -->
 
           <!-- Page Content -->
+
           <div id="page-content-wrapper">
             <div class="container-fluid px-4">
               <ul class="pagination">
                 <li style="margin-left: 80%;"><a class="page-link">Sort: </a></li>
-                <select class="page-link" [(ngModel)]="days" (click)="Loadday(days)" >
+                <select class="page-link" [(ngModel)]="days" (click)="Loadday(days)">
                   <option value=0>1 day</option>
                   <option value=7>7 day</option>
                   <option value=30>30 day</option>
                 </select>
               </ul>
-              <div class="row g-3 my-2">
-                <div class="col-md-3">
-                  <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded" style="background-color: rgb(50, 50, 247);color: aliceblue;">
-                    <div>
-                      <h3 class="fs-2">{{number}}</h3>
-                      <p class="fs-5">Products</p>
-                    </div>
-                    <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                  </div>
-                </div>
-
-                <div class="col-md-3">
-                  <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded" style="background-color: rgb(50, 50, 247);color: aliceblue;">
-                    <div>
-                      <h3 class="fs-2">{{total}}</h3>
-                      <p class="fs-5">Sales</p>
-                    </div>
-                    <i class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                  </div>
-                </div>
-
-                <div class="col-md-3">
-                  <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded" style="background-color: rgb(50, 50, 247);color: aliceblue;">
-                    <div>
-                      <h3 class="fs-2">{{count}}</h3>
-                      <p class="fs-5">Cancel</p>
-                    </div>
-                    <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                  </div>
-                </div>
-
-                <div class="col-md-3">
-                  <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded" style="background-color: rgb(50, 50, 247);color: aliceblue;">
-                    <div>
-                      <h3 class="fs-2">{{count2}}</h3>
-                      <p class="fs-5">Success</p>
-                    </div>
-                    <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                  </div>
-                </div>
-              </div>
-              <div *ngIf="btnDisabled" class="m-auto">
+              <div style="margin-left: 50%;" *ngIf="btnDisabled">
                 <h1 class="text-center display-3 mt-5">
-                  <i class="fas fa-spinner fa spin"></i>
+                  <mat-spinner></mat-spinner>
                 </h1>
               </div>
-              <div class="row my-5" *ngIf="oder1.length!=0">
-                <h1 class="fs-4 mb-3" >Recent Orders</h1>
-                <div class="col">
-                  <table class="table bg-white rounded shadow-sm  table-hover">
-                    <thead>
-                      <tr>
-                        <th scope="col" style="font-size: 1.5rem;" width="50">#</th>
-                        <th scope="col" style="font-size: 1.5rem;">Customer</th>
-                        <th scope="col" style="font-size: 1.5rem;">Time order</th>
-                        <th scope="col" style="font-size: 1.5rem;">Price</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let item of oder1, let i = index ">
-                        <td style="font-size: 1.2rem;">{{i+1}}</td>
-                        <td style="font-size: 1.2rem;">{{item.displayName}}</td>
-                        <td style="font-size: 1.2rem;">{{item.timeOrder|date}}</td>
-                        <td style="font-size: 1.2rem;">{{item.total|number: '2.' }}VNĐ</td>
-                        </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <form>
-                  <mat-paginator [length]="count2" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" (page)="LoadPagesize($event)"
-                  aria-label="Select page">
-                </mat-paginator>
-                </form>
-              </div>
+              <div *ngIf="!btnDisabled">
+                <div class="row g-3 my-2">
+                  <div class="col-md-3">
+                    <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded"
+                      style="background-color: rgb(50, 50, 247);color: aliceblue;">
+                      <div>
+                        <h3 class="fs-2">{{number}}</h3>
+                        <p class="fs-5">Products</p>
+                      </div>
+                      <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                    </div>
+                  </div>
 
+                  <div class="col-md-3">
+                    <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded"
+                      style="background-color: rgb(50, 50, 247);color: aliceblue;">
+                      <div>
+                        <h3 class="fs-2">{{total}}</h3>
+                        <p class="fs-5">Sales</p>
+                      </div>
+                      <i class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded"
+                      style="background-color: rgb(50, 50, 247);color: aliceblue;">
+                      <div>
+                        <h3 class="fs-2">{{count}}</h3>
+                        <p class="fs-5">Cancel</p>
+                      </div>
+                      <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3">
+                    <div class="p-3  shadow-sm d-flex justify-content-around align-items-center rounded"
+                      style="background-color: rgb(50, 50, 247);color: aliceblue;">
+                      <div>
+                        <h3 class="fs-2">{{count2}}</h3>
+                        <p class="fs-5">Success</p>
+                      </div>
+                      <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row my-5" *ngIf="oder1.length!=0">
+                  <h1 class="fs-4 mb-3">Recent Orders</h1>
+                  <div class="col">
+                    <table class="table bg-white rounded shadow-sm  table-hover">
+                      <thead>
+                        <tr>
+                          <th scope="col" style="font-size: 1.5rem;" width="50">#</th>
+                          <th scope="col" style="font-size: 1.5rem;">Customer</th>
+                          <th scope="col" style="font-size: 1.5rem;">Time order</th>
+                          <th scope="col" style="font-size: 1.5rem;">Price</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let item of oder1, let i = index ">
+                          <td style="font-size: 1.2rem;">{{i+1}}</td>
+                          <td style="font-size: 1.2rem;">{{item.displayName}}</td>
+                          <td style="font-size: 1.2rem;">{{item.timeOrder|date}}</td>
+                          <td style="font-size: 1.2rem;">{{item.total|number: '2.' }}VNĐ</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <form>
+                    <mat-paginator [length]="count2" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"
+                      (page)="LoadPagesize($event)" aria-label="Select page">
+                    </mat-paginator>
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <!-- /#page-content-wrapper -->
-    </div>
+      </div>
     </div>
   </mat-drawer-content>
 </mat-drawer-container>
