--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,12 +16,12 @@
               <div class="card-header card-header-primary">
                 <h3 class="card-title">Đơn hàng chờ xác nhận</h3>
               </div>
-              <div *ngIf="btnDisabled" class="m-auto">
+              <div style="margin-left: 50%;" *ngIf="btnDisabled">
                 <h1 class="text-center display-3 mt-5">
-                  <i class="fas fa-spinner fa spin"></i>
+                  <mat-spinner></mat-spinner>
                 </h1>
               </div>
-              <div class="card-body">
+              <div class="card-body" *ngIf="!btnDisabled">
                 <div class="table-responsive">
 
                   <table class="table">
