--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -46,13 +46,13 @@
                         </div>
                       </div>
                     </form>
-                    <div class="card-body">
+                    <div style="margin-left: 50%;" *ngIf="btnDisabled">
+                      <h1 class="text-center display-3 mt-5">
+                        <mat-spinner></mat-spinner>
+                      </h1>
+                    </div>
+                    <div class="card-body" *ngIf="!btnDisabled">
                       <div class="table-responsive">
-                        <div *ngIf="btnDisabled" class="m-auto">
-                          <h1 class="text-center display-3 mt-5">
-                            <i class="fas fa-spinner fa spin"></i>
-                          </h1>
-                        </div>
                         <div class="alert alert-success" *ngIf="mess!=''">
                           <span>{{mess}}</span>
                         </div>
