--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -54,13 +54,13 @@
                     <div>
                       <app-message></app-message>
                     </div>
-                    <div class="card-body">
+                    <div style="margin-left: 50%;" *ngIf="btnDisabled">
+                      <h1 class="text-center display-3 mt-5">
+                        <mat-spinner></mat-spinner>
+                      </h1>
+                    </div>
+                    <div class="card-body" *ngIf="!btnDisabled">
                       <div class="table-responsive">
-                        <div *ngIf="btnDisabled" class="m-auto">
-                          <h1 class="text-center display-3 mt-5">
-                            <i class="fas fa-spinner fa spin"></i>
-                          </h1>
-                        </div>
                         <div style="margin-left: 90%;">
                           <button rel="tooltip" title="Download" class="btn btn-success" (click)="exportExcel()">
                           <i class="fas fa-download"></i></button>
