--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -42,7 +42,7 @@
                             </button>
 
                           </div>
-                          <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Thêm bài viết</button>
+                          <!-- <button class="btn btn-sn btn-outline-primary" (click)="openDialog()">Thêm bài viết</button> -->
                         </div>
                       </div>
                     </form>
@@ -56,9 +56,9 @@
                         <div class="alert alert-success" *ngIf="mess!=''">
                           <span>{{mess}}</span>
                         </div>
-                        <!-- <div>
+                        <div>
                             <app-add-news (savingFinshed)="finishAndAlert($event)"></app-add-news>
-                          </div> -->
+                          </div>
 
                         <table class="table">
                           <thead class="text-primary">
