--- a/src/app/news/add-news/add-news.component.html
+++ b/src/app/news/add-news/add-news.component.html
@@ -134,5 +134,5 @@
   </form>
   <app-my-ck-editor [(ngModel)]="Data"></app-my-ck-editor>
   </ng-template>
-  <button class="btn btn-sm btn-outline-primary float-right m-3" (click)="open(content)">THÊM BÀI VIẾT</button>
+  <button class="btn btn-sn btn-outline-primary" (click)="open(content)">THÊM BÀI VIẾT</button>
 </div>
